--- a/_posts/2019-12-23-the-us-narrative-today.html
+++ b/_posts/2019-12-23-the-us-narrative-today.html
@@ -1741,5 +1741,108 @@ stories:
   state: Illinois
   domain: http://www.metropolisplanet.com/
   link: https://www.metropolisplanet.com/news/bost-finkenauer-introduce-bill-to-address-rural-teacher-shortages/article_cbc1057e-eddd-5951-af7d-1e171199cce5.html
+images:
+- name: braceros-domingo-ulloa-gauge-on-aircraft-carrier.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-gauge-on-aircraft-carrier.jpg
+- name: razorcliff-razorcliff-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dry-skin.jpg
+- name: berlinwall2-berlinwall-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-brush.jpg
+- name: oldhousecars-house-old-cars-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-post-modern.jpg
+- name: copper-circuit-white-house-lawn-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-white-house-lawn-view.jpg
+- name: trucksilo-trucksilo-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-internet-numbers.jpg
+- name: oldsmallboat-oldsmallboat-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-soul.jpg
+- name: rain-princess-border-fence-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line.jpg
+- name: dc-statue-dcstatue-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-circuit.jpg
+- name: san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-smoking-cigarette.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-smoking-cigarette.JPG
+- name: lincoln-memorial-lincolnmemorial-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-creativity.jpg
+- name: berlinwall-DSC-0084-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-light-dali.jpg
+- name: copper-circuit-face-eyes-shut-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-face-eyes-shut-statue.jpg
+- name: school-clouds-church-clouds-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-ww2-color.jpg
+- name: old-door-lock-old-door-lock-2-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-green-zuma.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-free-woman.jpg
+- name: supreme-court-supremecourt-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crabapple.jpg
+- name: oldhotel-oldhotel-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
+- name: store-on-corner-store-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-rain.jpg
+- name: old-gas-pumps-oldgaspumps-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-sand-paper.jpg
+- name: braceros-domingo-ulloa-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital_36728421355_o.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-circuit.jpg
+- name: status-berlin-status-berlin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-deep-connections.jpg
+- name: mosaic-face-mosaic-face-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-bright-sand.jpg
+- name: oldcabin-oldcabin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-green-zuma.jpg
+- name: art-museum-art-museum-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-yellow-paper.jpg
+- name: border-fence-border-fence-on-hill-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-sand-paper.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
+- name: rockingchair-rockingchair-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-hot-spicy.jpg
+- name: aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+- name: flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
+- name: catacombs-catacombs-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-matrix.jpg
+- name: docks-docks-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-crabapple.jpg
+- name: razorwire-DSC-0080-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-soul.jpg
+- name: stalin-time-street-car-san-francisco.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-street-car-san-francisco.jpg
+- name: gypsymosaic-gypsy-eyes-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-smoking-cigarette.jpg
+- name: oldhotel-oldhotel-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-umberto-bocc.jpg
+- name: birdhouse-birdhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-dresden.jpg
+- name: gears-4882162452-fa3126b38d-b-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-mucha-mult.jpg
+- name: abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+- name: oldbarn-oldbarn-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-space-pizza.jpg
+- name: bf-skinner-frosty-downtown-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-frosty-downtown-lights.jpg
+- name: aws-s3-methuselah-methuselah-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-methuselah-methuselah-still-600.jpg
+- name: dc-statue-dcstatue-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-colored-circuits.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-satan-red.jpg
+- name: oldtrain-oldtrain-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-hot-spicy.jpg
+- name: oldbarn-oldbarn-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-really-hot.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-wols.jpg
+- name: la-muse-boats-waterfront-bristol.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-boats-waterfront-bristol.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
 ---
 Sachy Out On Bond.&nbsp;Rams Reduced To Playoff Observers After Season Of Setbacks.&nbsp;Indians Lose To Dogs.&nbsp;Campus Credit Unions Boost Students IQ.&nbsp;Detroit Rockers Wilson Ready To Bid Fond, Loud, Farewell At Crofoot.&nbsp;Burglary At Woodland Drug Store Leads To Christmas Ditty.&nbsp;Diplomats Visit American Jailed In Russia On Spying Charges.&nbsp;Donovan Cooper Is Laurel Student Of The Week.&nbsp;
